fixed scrolling issue for menu sections in menu.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -238,7 +238,7 @@ footer {
 .menu-section-wrapper {
     min-height: 100vh;
     width: 100%;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 
 .menu-section-txt{
