--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -178,6 +178,12 @@ footer {
     min-height: auto;
 }
 
+#menu h2 {
+    font-size: 375%;
+    padding-top: 5px;
+    color: #DFA201;
+}
+
 #menu h3 {
     font-size: 250%;
     padding-top: 10px;
@@ -191,7 +197,7 @@ footer {
     top: 12vh;
     float: left;
     left: -4px;
-    height: 74vh;
+    height: 76vh;
     width: 130px;
     background-color: #B3A375;
     color: #23170B;
@@ -236,6 +242,7 @@ footer {
 
     /* MENU SECTION STYLING */
 .menu-section-wrapper {
+    height: fit-content;
     min-height: 100vh;
     width: 100%;
     overflow: hidden;
@@ -258,7 +265,7 @@ footer {
     float: right;
     top: 12vh;
     right: -4px;
-    max-height: 74vh;
+    max-height: 76vh;
     width: auto;
     border-radius: 20px 0 0 20px;
     border: 4px solid black;    
