--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -198,7 +198,7 @@ footer {
     float: left;
     left: -4px;
     height: 76vh;
-    width: 130px;
+    width: 105px;
     background-color: #B3A375;
     color: #23170B;
     border-radius: 0 20px 20px 0;
@@ -232,7 +232,7 @@ footer {
 #sidebar a {
     color: #402C13;
     text-decoration: none;
-    font-size: 150%;
+    font-size: 130%;
     min-width: 150px;
     padding: 0 10px 0 10px;
 
@@ -255,7 +255,7 @@ footer {
     position: relative;
     max-height: 74vh;
     min-height: 100vh;
-    width: 50vw;
+    width: 53vw;
     float: left;
     left: 130px;
     top: 12vh;
@@ -309,8 +309,8 @@ footer {
 #iframe-wrapper {
     position: relative;
     width: 600px;
-    height: 400px;
-    top: 100px;
+    height: 50vh;
+    top: 13vh;
     left: -4px;
     border: 4px solid black;
     border-radius: 0 20px 20px 0;
@@ -320,9 +320,9 @@ footer {
 
 #adress-wrapper {
     position: relative;
-    top: 120px;
+    top: 17vh;
     left: -4px;
-    height: 140px;
+    height: 20vh;
     width: 600px;
     border: 4px solid black;
     border-radius: 0 20px 20px 0;
@@ -348,11 +348,11 @@ footer {
 
 #form-wrapper {
     position: absolute;
-    top: 100px;
+    top: 13vh;
     float: right;
     right: -4px;
     width: 600px;
-    height: 560px;
+    height: 74vh;
     border: 4px solid black;
     border-radius: 20px 0 0 20px;
     background-color: #B3A375;
@@ -390,7 +390,6 @@ form input {
 
 form p {
     position: relative;
-    top: 25px;
     text-align: center;
     font-size: 150%;
     padding-top: 50px;
@@ -469,7 +468,29 @@ form p {
 }   
 
     /* MENU PAGE */
+@media screen {
+    @media (max-width: 1250px){
+        .menu-section-txt               {max-width: 50%;}
+        #menu p                         {font-size: 110%;}
+    }
+}
 
+@media screen {
+    @media (max-width: 1150px){
+        .menu-section-txt               {width: 80%; float: none; left: 0; margin-right: auto; margin-left: auto;}
+        .menu-section-img               {top: -10vh; max-width: calc(100vw - 145px); height: auto;}
+        #menu h3                        {font-size: 200%; padding-top: 10px;}
+        #menu p                         {font-size: 100%;}
+    }
+}
+
+@media screen {
+    @media (max-width: 850px){
+        .menu-section-txt               {left: 52.5px;}
+        #menu h2                        {font-size: 250%;}
+        .menu-section-img               {top: 0;}
+    }
+}
 
     /* GALLERY PAGE */
 @media screen  {
