added wireframe-menu.img to wireframes folder

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -218,15 +218,14 @@ footer {
 
 #sidebar ul {
     position: relative;
-    top: auto;
-
-
+    height: 16.6%;
+    top: -4vh;
 }
 
 #sidebar li {
-    margin-top: 65px;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
     text-align: center;
-
 }
 
 #sidebar a {
@@ -235,7 +234,6 @@ footer {
     font-size: 130%;
     min-width: 150px;
     padding: 0 10px 0 10px;
-
 }
 
 #sidebar a:hover {
@@ -245,22 +243,22 @@ footer {
 
     /* MENU SECTION STYLING */
 .menu-section-wrapper {
-    height: fit-content;
     min-height: 100vh;
     width: 100%;
-    overflow: hidden;
+
 }
 
 .menu-section-txt{
     position: relative;
     max-height: 74vh;
-    min-height: 100vh;
+    height: fit-content;
     width: 53vw;
     float: left;
     left: 130px;
     top: 12vh;
     text-align: center;
     color: #cac2ab;
+    clear: both;
 }
 
 .menu-section-img
@@ -273,6 +271,7 @@ footer {
     width: auto;
     border-radius: 20px 0 0 20px;
     border: 4px solid black;
+    margin-bottom: 50px;
 }
 
 /* GALLERY STYLING */
@@ -470,6 +469,7 @@ form p {
     /* MENU PAGE */
 @media screen {
     @media (max-width: 1250px){
+        .menu-section-img               {top: 12vh;}
         .menu-section-txt               {max-width: 50%;}
         #menu p                         {font-size: 110%;}
     }
@@ -478,7 +478,7 @@ form p {
 @media screen {
     @media (max-width: 1150px){
         .menu-section-txt               {width: 80%; float: none; left: 0; margin-right: auto; margin-left: auto;}
-        .menu-section-img               {top: -10vh; max-width: calc(100vw - 145px); height: auto;}
+        .menu-section-img               {top: 100px; max-width: calc(100vw - 145px); height: auto;}
         #menu h3                        {font-size: 200%; padding-top: 10px;}
         #menu p                         {font-size: 100%;}
     }
@@ -488,7 +488,15 @@ form p {
     @media (max-width: 850px){
         .menu-section-txt               {left: 52.5px;}
         #menu h2                        {font-size: 250%;}
-        .menu-section-img               {top: 0;}
+        .menu-section-img               {top: 100px;}
+    }
+}
+
+@media screen {
+    @media (max-width: 330px){
+        #menu p                        {font-size: 90%;}
+        .menu-section-img              {top: 100px;}
+        #side-bar                      {font-size: 10%;}
     }
 }
 
