--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -119,7 +119,7 @@ footer {
 }
 
 /* HOMEPAGE STYLING */
-#home-bg, #oops-bg {
+#home-bg {
     position: absolute;
     top: 75px;
     width: 100vw;
@@ -392,6 +392,18 @@ form p {
     text-align: center;
     font-size: 150%;
     padding-top: 50px;
+}
+
+/* 404 PAGE STYLING */
+#home-bg {
+    position: absolute;
+    top: 75px;
+    width: 100vw;
+    min-height: calc(100vh - 150px);
+    background-image: url(../images/oops.png);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 /* RESPONSIVE DESIGN */
