fixed filepath error in homepage styling

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -395,12 +395,12 @@ form p {
 }
 
 /* 404 PAGE STYLING */
-#home-bg {
+#oops-bg {
     position: absolute;
     top: 75px;
     width: 100vw;
     min-height: calc(100vh - 150px);
-    background-image: url(images/oops.png);
+    background-image: url(../images/oops.png);
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
