--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -406,6 +406,17 @@ form p {
     background-size: cover;
 }
 
+#oops-bg a {
+    position: relative;
+    top: 65vh;
+    font-size: 200%;
+    text-decoration: none;
+    background-color: #B3A375;
+    color: #23170B;
+    border: 2px solid #23170B;
+    border-radius: 5px;
+}
+
 /* RESPONSIVE DESIGN */
 
     /* NAV-BAR */
