--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -404,6 +404,7 @@ form p {
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    text-align: center;
 }
 
 #oops-bg a {
