fixed positioning issue for 'take me back link' on 404.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -414,6 +414,7 @@ form p {
     text-decoration: none;
     background-color: #B3A375;
     color: #23170B;
+    padding: 3px;
     border: 2px solid #23170B;
     border-radius: 5px;
 }
