updated content and styling for about.html

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -150,7 +150,7 @@ footer {
     position: relative;
     top: 75px;
     float: right;
-    right: 5vw;
+    right: 10vw;
     max-width: 65vw;
     color: #cac2ab;
     font-size: 95%;
@@ -158,6 +158,7 @@ footer {
     overflow-y: auto;
     margin-left: auto;
     margin-right: auto;
+    padding-top: 75px;
 }
 
 #about h2 {
