--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,10 @@ header {
     margin: 0 15px 35px 0;
 }
 
+#nav-menu h2 {
+    font-size: 115%;
+}
+
 #nav-menu li a {
     text-align: center;
     padding-left: 6px;
