--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,6 +122,13 @@ footer {
     font-size: 120%;
 }
 
+.footer-spacing {
+    position: relative;
+    clear: both;
+    bottom: 0;
+    height: 150px;
+}
+
 /* HOMEPAGE STYLING */
 #home-bg {
     position: absolute;
@@ -163,6 +170,7 @@ footer {
     margin-left: auto;
     margin-right: auto;
     padding-top: 75px;
+    clear: both;
 }
 
 #about h2 {
@@ -283,7 +291,7 @@ footer {
     width: auto;
     border-radius: 20px 0 0 20px;
     border: 4px solid black;
-    margin-bottom: 50px;
+    margin:25px 0 50px 0;
 }
 
 /* GALLERY STYLING */
@@ -555,7 +563,7 @@ form p {
         }
 
         #menu p {
-            font-size: 110%;
+            font-size: 100%;
         }
     }
 }
@@ -571,18 +579,19 @@ form p {
         }
 
         .menu-section-img {
-            top: 100px;
+            clear: both;
+            top: 150px;
             max-width: calc(100vw - 145px);
             height: auto;
         }
 
         #menu h3 {
-            font-size: 200%;
+            font-size: 190%;
             padding-top: 10px;
         }
 
         #menu p {
-            font-size: 100%;
+            font-size: 90%;
         }
     }
 }
@@ -592,19 +601,27 @@ form p {
         .menu-section-txt {
             left: 52.5px;
         }
+        .menu-section-img {
+            clear: both;
+            margin-top: 150px;
+        }
 
         #menu h2 {
-            font-size: 250%;
+            font-size: 240%;
         }
 
         .menu-section-img {
             top: 100px;
+            margin: 50px 0 50px 0;
         }
     }
 }
 
 @media screen {
     @media (max-width: 330px) {
+        #menu h3 {
+            font-size: 150%;
+        }
         #menu p {
             font-size: 90%;
         }
