--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,11 +338,16 @@ footer {
 
 }
 
+iframe {
+    width: 600px;
+    height: 50vh;
+}
+
 #adress-wrapper {
     position: relative;
     top: 17vh;
     left: -4px;
-    height: 20vh;
+    min-height: 20vh;
     width: 600px;
     border: 4px solid black;
     border-radius: 0 20px 20px 0;
@@ -670,7 +675,7 @@ form p {
             right: -4px;
             float: right;
             overflow-x: hidden;
-            margin-top: 40px;
+            margin-top: 65px;
             margin-bottom: 200px;
         }
     }
@@ -701,11 +706,38 @@ form p {
         #form-wrapper input {
             font-size: 110%;
             left: 48vw;
-            max-width: 130px;
+            max-width: 120px;
         }
 
         #form-wrapper p {
             top: -25px;
+        }
+    }
+}
+
+@media screen {
+    @media (max-height: 700px) {
+        #adress-wrapper {
+            min-height: 26vh;
+        }
+        #form-wrapper {
+            height: fit-content;
+        }
+    }
+}
+
+@media screen {
+    @media (max-width: 475px) {
+        #adress {
+            left: 5px;
+            font-size: 75%;
+        }
+        #contact-info {
+            left: 15px;
+            font-size: 75%;
+        }
+        #form-wrapper label {
+            font-size: 150%;
         }
     }
 }
