--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -274,6 +274,7 @@ footer {
     min-height: 100vh;
     width: 100%;
     clear: both;
+    overflow-x: hidden;
 }
 
 .menu-section-txt {
@@ -282,23 +283,25 @@ footer {
     height: fit-content;
     width: 53vw;
     float: left;
-    left: 130px;
-    top: 12vh;
+    left: 115px;
+    top: 90px;
     text-align: center;
     color: #cac2ab;
     clear: both;
+    border: 4px solid red;
+    border-radius: 5px;
 }
 
 .menu-section-img {
     position: relative;
     float: right;
-    top: 12vh;
+    top: 90px;
     right: -4px;
     max-height: 76vh;
     width: auto;
     border-radius: 20px 0 0 20px;
     border: 4px solid black;
-    margin:25px 0 50px 0;
+    margin:0 0 50px 0;
 }
 
 /* GALLERY STYLING */
