--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -319,11 +319,11 @@ footer {
 /* CONTACT STYLING */
 
 #contact-wrapper {
-    min-height: 100vh;
+    min-height: calc(100vh - 150px);
     height: fit-content;
-    width: 100vw;
-    max-width: calc(100vw - 4px);
+    width: 100%;
     overflow-x: hidden;
+    overflow-y: auto;
 }
 
 #contact h3 {
@@ -338,7 +338,7 @@ footer {
     position: relative;
     width: 600px;
     height: 50vh;
-    top: 13vh;
+    top: 15px;
     left: -4px;
     border: 4px solid black;
     border-radius: 0 20px 20px 0;
@@ -353,7 +353,7 @@ iframe {
 
 #adress-wrapper {
     position: relative;
-    top: 17vh;
+    top: 45px;
     left: -4px;
     min-height: 20vh;
     width: 600px;
@@ -381,12 +381,12 @@ iframe {
 
 #form-wrapper {
     position: absolute;
-    top: 13vh;
-    float: right;
-    right: -4px;
+    top: 90px;
+    right: 0;
     width: 600px;
     height: 74vh;
     border: 4px solid black;
+    border-width: 4px 0 4px 4px;
     border-radius: 20px 0 0 20px;
     background-color: #B3A375;
     color: black;
@@ -737,15 +737,29 @@ form p {
 @media screen {
     @media (max-width: 475px) {
         #adress {
-            left: 5px;
-            font-size: 75%;
+            left: 10px;
+            font-size: 100%;
         }
         #contact-info {
             left: 15px;
-            font-size: 75%;
+            font-size: 100%;
         }
         #form-wrapper label {
             font-size: 150%;
+        }
+    }
+}
+
+@media screen {
+    @media (max-width: 400px) {
+        #adress {
+            left: 15px;
+            font-size: 80%;
+        }
+        #contact-info {
+            top: 20px;
+            left: 15px;
+            font-size: 80%;
         }
     }
 }
