--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,6 +1,7 @@
 /* IMPORT FONT (CODE TAKEN FROM GOOGLE FONTS) */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+/* INITIAL SITE WIDE STYLING */
 * {
     margin: 0;
     border: 0;
@@ -16,6 +17,7 @@ body {
 }
 
 /* HEADER STYLING */
+    /* header is always visible at the top of the screen all pages */
 header {
     position: fixed;
     top: 0;
@@ -26,7 +28,7 @@ header {
     text-transform: capitalize;
     z-index: 10;
 }
-
+    /* link to home page on left side of header */
 #logo {
     position: inherit;
     display: inline;
@@ -35,7 +37,7 @@ header {
     left: 15px;
     font-size: 100%;
 }
-
+    /* main site navigation (unordered list) on right hand side of header */
 #nav-bar {
     position: inherit;
     top: 25px;
@@ -71,7 +73,7 @@ header a {
     float: right;
     padding-right: 10px;
 }
-
+    /* dropdown menu only visible at lower resolutions */
 #nav-dropdown {
     background-color: rgba(0, 0, 0, 0);
     color: #DFA201;
@@ -94,6 +96,7 @@ header a {
 }
 
 /* FOOTER STYLING */
+    /* footer is always visible at the bottom of the screen all pages */
 footer {
     position: fixed;
     bottom: 0;
@@ -102,7 +105,7 @@ footer {
     background-color: black;
     z-index: 10;
 }
-
+    /* social media icons on left side of footer */
 #media-links {
     position: relative;
     float: left;
@@ -117,7 +120,7 @@ footer {
 #media-links i {
     font-size: 200%;
 }
-
+    /* link to contact page on right hand side of footer */
 #footer-contact-link {
     position: relative;
     float: right;
@@ -137,6 +140,7 @@ footer {
 }
 
 /* HOMEPAGE STYLING */
+    /* homepage background image */
 #home-bg {
     position: absolute;
     top: 75px;
@@ -152,7 +156,7 @@ footer {
 #about {
     text-align: center;
 }
-
+    /* stick image to left hand side of screen and set borders */
 #about-img {
     position: fixed;
     top: 90px;
@@ -163,7 +167,7 @@ footer {
     border-radius: 0 20px 20px 0;
     border: 4px solid black;
 }
-
+    /* keep text to the right of screen */
 #about-txt {
     position: relative;
     top: 0;
@@ -194,6 +198,7 @@ footer {
 }
 
 /* MENU STYLING */
+    /* menu pages consisting of five sections, one per category */
 #menu {
     min-height: auto;
 }
@@ -214,6 +219,7 @@ footer {
 }
 
 /* MENU SIDEBAR STYLING */
+    /* secondary navigation menu stuck to the left hand side for navigating between menu sections */
 #sidebar {
     position: fixed;
     top: 12vh;
@@ -227,13 +233,13 @@ footer {
     border: 4px solid black;
     text-align: center;
     z-index: 10;
-
+    /* side bar animates on load to enter screen from the left */
     animation-name: slide-bar;
     animation-duration: 1s;
     animation-fill-mode: forwards;
 }
 
-/* SETUP SIDEBAR ANIMATION */
+    /* setup side bar animation */
 @keyframes slide-bar {
     from {
         left: -130px;
@@ -270,6 +276,7 @@ footer {
 }
 
 /* MENU SECTION STYLING */
+    /* 5 menu sections consisting of an image two headers and and paragraph each */
 .menu-section-wrapper {
     min-height: 100vh;
     width: 100%;
@@ -289,7 +296,7 @@ footer {
     color: #cac2ab;
     clear: both;
 }
-
+    /* example image stuck to the right of the screen */
 .menu-section-img {
     position: relative;
     float: right;
@@ -303,6 +310,7 @@ footer {
 }
 
 /* GALLERY STYLING */
+    /* collectionof photographs aranged allong a 'masonry' patern */
 #gallery {
     position: absolute;
     top: 10vh;
@@ -317,7 +325,6 @@ footer {
 }
 
 /* CONTACT STYLING */
-
 #contact-wrapper {
     min-height: calc(100vh - 150px);
     height: fit-content;
@@ -333,7 +340,7 @@ footer {
 #contact h4 {
     font-size: 90%;
 }
-
+    /* iframe containing google map stuck to the left hand side */
 #iframe-wrapper {
     position: relative;
     width: 600px;
@@ -350,7 +357,7 @@ iframe {
     width: 600px;
     height: 50vh;
 }
-
+    /* section containing adres & contact information */
 #adress-wrapper {
     position: relative;
     top: 45px;
@@ -378,7 +385,7 @@ iframe {
     left: 75px;
     top: 15px;
 }
-
+    /* section containing a contact form */
 #form-wrapper {
     position: absolute;
     top: 90px;
@@ -429,6 +436,7 @@ form p {
 }
 
 /* 404 PAGE STYLING */
+    /* custom 404 image */
 #oops-bg {
     position: absolute;
     top: 75px;
@@ -440,7 +448,7 @@ form p {
     background-size: cover;
     text-align: center;
 }
-
+    /* link back to homepage */
 #oops-bg a {
     position: relative;
     top: 62vh;
@@ -456,6 +464,7 @@ form p {
 /* RESPONSIVE DESIGN */
 
 /* NAV-BAR */
+    /* hide replace nav bar with dropdown menu at lower resolutions */
 @media screen {
     @media (max-width: 650px) {
         #nav-menu {
@@ -471,7 +480,7 @@ form p {
         }
     }
 }
-
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 420px) {
         #logo {
@@ -485,6 +494,7 @@ form p {
 
 
 /* FOOTER */
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 420px) {
         #footer-contact-link {
@@ -500,6 +510,7 @@ form p {
 }
 
 /* ABOUT PAGE */
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 1600px) {
         #about-txt {
@@ -510,7 +521,7 @@ form p {
         }
     }
 }
-
+    /* adjust image size */
 @media screen {
     @media (max-height: 1400px) {
         #about-img {
@@ -518,7 +529,7 @@ form p {
         }
     }
 }
-
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 1024px) {
         #about-txt {
@@ -565,10 +576,11 @@ form p {
 }
 
 /* MENU PAGE */
+    /* adjust image size and positioning */
 @media screen {
     @media (max-width: 1250px) {
         .menu-section-img {
-            top: 12vh;
+            top: 90px;
         }
 
         .menu-section-txt {
@@ -580,7 +592,7 @@ form p {
         }
     }
 }
-
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 1150px) {
         .menu-section-txt {
@@ -608,7 +620,7 @@ form p {
         }
     }
 }
-
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 850px) {
         .menu-section-txt {
@@ -629,7 +641,7 @@ form p {
         }
     }
 }
-
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 330px) {
         #menu h3 {
@@ -659,6 +671,7 @@ form p {
 }
 
 /* GALLERY PAGE */
+    /* change column count */
 @media screen {
     @media (max-width: 1024px) {
         #gallery {
@@ -676,6 +689,7 @@ form p {
 }
 
 /* CONTACT PAGE */
+    /* adjust font and positioning */
 @media screen {
     @media (max-width: 1200px) {
         #form-wrapper {
