fixed positioning issues for ipad air/mini and updated README.md to reflect change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -699,6 +699,7 @@ form p {
             overflow-x: hidden;
             margin-top: 65px;
             margin-bottom: 200px;
+            height: fit-content;
         }
     }
 }
